# Copyright 2016 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("gl") {
  sources = [
    "element_binding.cc",
    "element_binding.h",
    "program.cc",
    "program.h",
    "shader.cc",
    "shader.h",
  ]

  deps = [
    "//base",
  ]

  public_deps = [
    "//ui/gl",
  ]
}
