# Copyright 2016 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("shadows") {
  sources = [
    "shadow_renderer.cc",
    "shadow_renderer.h",
    "shadow_scene.cc",
    "shadow_scene.h",
    "solid_quad_program.cc",
    "solid_quad_program.h",
  ]

  deps = [
    "//base",
    "//vfx/geometry",
    "//vfx/gl",
  ]
}
