# Copyright 2016 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("shadows") {
  sources = [
    "penumbra_program.cc",
    "penumbra_program.h",
    "shadow_renderer.cc",
    "shadow_renderer.h",
    "shadow_scene.cc",
    "shadow_scene.h",
  ]

  deps = [
    "//base",
    "//vfx/geometry",
    "//vfx/gl",
  ]
}
