# Copyright 2016 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("dart") {
  deps = [
    "//base",
    "//dart/runtime/vm:libdart_platform",
    "//dart/runtime:libdart",
  ]

  sources = [
    "dart_init.cc",
    "dart_init.h",
  ]
}
